--- a/homework_4/index.html
+++ b/homework_4/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Homework 4</title>
     <meta charset="utf-8"/>
     <meta name="author" content="Abraham Chileshe"/>
     <link rel="stylesheet" href="css/style.css"/>
