--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" /> 
 		<meta name = "author" content="Abraham Chileshe">
 		<meta name = "description" content="Homework number 5">
-		<link href="css/Style.css" rel="stylesheet" type="text/css" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
